--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./donato.html">Donato</a>
+                        <a class="nav-link" href="./donato.html">Donato,tagliati i capelli</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="./cartman.html">Roberto</a>
