--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./donato.html">Donato</a>
+                        <a class="nav-link" href="./donato.html">Perdonato</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="./cartman.html">Roberto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./francesco.html">Francesco</a>
+                        <a class="nav-link active" aria-current="page" href="./francesco.html">Francesco dal ghetto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./claudio.html">Claudio</a>
+                        <a class="nav-link active" aria-current="page" href="./claudio.html">Claudio Imperatore
+                            Amssimo</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
