--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./donato.html">Perdonato</a>
+                        <a class="nav-link" href="./donato.html">Donato the best</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./cartman.html">RobertoKTM</a>
+                        <a class="nav-link active" aria-current="page" href="./cartman.html">Roberto KTM mai</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./francesco.html">Francesco</a>
+                        <a class="nav-link active" aria-current="page" href="./francesco.html">Francesco con i
+                            capelloni</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="./claudio.html">Claudio Imperatore
-                            Amssimo</a>
+                            infame</a>
                     </li>
-
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -46,7 +46,6 @@
             </div>
         </div>
     </nav>
-
     <main>
         <h1>Conflicts</h1>
     </main>
